refactoring expert and dealing with gemini.